--- a/lib/bitcoin_web/templates/page/index.html.eex
+++ b/lib/bitcoin_web/templates/page/index.html.eex
@@ -37,6 +37,17 @@
 </section>
 -->
 
-<div id= "messages"> </div>
+<%# <style>
+body{
+  background: #222a2a;
+  font-family: 'Roboto Mono' , 'monospace';
+  color: #ffffff
+
+}
+</style> %>
+
+
 <canvas id="myChart"></canvas>
+<div id= "messages" ></div>
+<div id = "reward" ></div>
 
